fix overflow

--- a/src/css/components/header.sass
+++ b/src/css/components/header.sass
@@ -3,6 +3,7 @@
     background: linear-gradient(to bottom, rgba(238,238,238,1) 0%,rgba(0,0,0,0) 100%)
     overflow: hidden
     @media (max-width: 950px)
+        overflow: visible
         background: none
     @media (max-width: 766px)
         background-color: #fff
